# MauMau

./: .gitignore  CMakeLists.txt  CMakeSettings.json
client/: .gitignore  CMakeLists.txt
client/client/: CMakeLists.txt  Main.cpp  Main.h
client/client/gui/: AvatarChoosePopup.cpp  AvatarChoosePopup.h  AvatarChooser.cpp  AvatarChooser.h  AvatarGrid.cpp  AvatarGrid.h  BasicOptionsElement.cpp  BasicOptionsElement.h  BasicRoomCreationElement.cpp  BasicRoomCreationElement.h  BasicRoomJoinElement.cpp  BasicRoomJoinElement.h  BoolOptionElement.cpp  BoolOptionElement.h  CMakeLists.txt  CategorizedAvatarGrid.cpp  CategorizedAvatarGrid.h  ClickableCursorUtils.cpp  ClickableCursorUtils.h  ColoredButton.cpp  ColoredButton.h  CombinedPositioning.cpp  CombinedPositioning.h  ContinueBackButtonBar.cpp  ContinueBackButtonBar.h  ContinueOptionsBackButtonBar.cpp  ContinueOptionsBackButtonBar.h  CreateLocalRoomElement.cpp  CreateLocalRoomElement.h  CreateOnlineRoomElement.cpp  CreateOnlineRoomElement.h  CreditsElement.cpp  CreditsElement.h  EditOptionsElement.cpp  EditOptionsElement.h  GameEndElement.cpp  GameEndElement.h  IntegerOptionElement.cpp  IntegerOptionElement.h  IntegerSelector.cpp  (+35 more)
client/client/localServer/: CMakeLists.txt  LocalServer.cpp  LocalServer.h
client/client/model/: AbstractClientGameEndHandler.h  AbstractGameFacade.h  AbstractReturnBackToMenuHandler.h  AbstractRoomLeaveHandler.h  CMakeLists.txt  CardAnimation.cpp  CardAnimation.h  CardAnimationCollection.cpp  CardAnimationCollection.h  CardAnimationSet.cpp  CardAnimationSet.h  CardAnimator.cpp  CardAnimator.h  ClientPlayerList.cpp  ClientPlayerList.h  CreateRoomNetworkGameFacade.cpp  CreateRoomNetworkGameFacade.h  EventManager.h  FunctionWrapper.h  JoinRoomNetworkGameFacade.cpp  JoinRoomNetworkGameFacade.h  LocalGameFacade.cpp  LocalGameFacade.h  LocalPlayer.cpp  LocalPlayer.h  LocalServer.cpp  LocalServer.h  MauMauGameAccessorFromClient.cpp  MauMauGameAccessorFromClient.h  MauMauGameAccessorFromServer.cpp  MauMauGameAccessorFromServer.h  MauMauPunishmentMessageGenerator.cpp  MauMauPunishmentMessageGenerator.h  MauMauTutorial.cpp  MauMauTutorial.h  MauMauTutorialWrapper.cpp  MauMauTutorialWrapper.h  MessageQueue.cpp  MessageQueue.h  NetworkGameFacade.cpp  (+18 more)
client/client/network/: CMakeLists.txt  ClientPacketTransmitter.cpp  ClientPacketTransmitter.h  ConnectionToServer.cpp  ConnectionToServer.h  LocalPacketTransmitter.cpp  LocalPacketTransmitter.h  NetworkErrorHandler.h  NetworkErrorMessageGenerator.cpp  NetworkErrorMessageGenerator.h
client/client/rendering/: AnimatorToPlayStack.cpp  AnimatorToPlayStack.h  BottomMessageRenderer.cpp  BottomMessageRenderer.h  CMakeLists.txt  CardIndexRenderer.cpp  CardIndexRenderer.h  CardInterpolator.cpp  CardInterpolator.h  CardRenderer.cpp  CardRenderer.h  CardSceneBackgroundRenderer.cpp  CardSceneBackgroundRenderer.h  CardSceneRenderer.cpp  CardSceneRenderer.h  CardSceneRendererWithBlur.cpp  CardSceneRendererWithBlur.h  CardStackPositions.cpp  CardStackPositions.h  CardStackRenderer.cpp  CardStackRenderer.h  ChooseCardIndexRenderer.cpp  ChooseCardIndexRenderer.h  ChooseCardRenderer.cpp  ChooseCardRenderer.h  CircleSectorRenderer.cpp  CircleSectorRenderer.h  ClickableOverlayRenderer.cpp  ClickableOverlayRenderer.h  ColorRenderer3D.cpp  ColorRenderer3D.h  DrawCardStackRenderer.cpp  DrawCardStackRenderer.h  DrawnCardRenderer.cpp  DrawnCardRenderer.h  GameEndRenderer.cpp  GameEndRenderer.h  GaussianBlurPostProcessor.cpp  GaussianBlurPostProcessor.h  HandCardStackRenderer.cpp  (+29 more)
client/client/renderingModel/: AnimationsToPlayStackFilter.cpp  AnimationsToPlayStackFilter.h  AvatarTextures.cpp  AvatarTextures.h  BufferOffsetMacro.h  CMakeLists.txt  CardDimensions.h  CardIndexTextures.cpp  CardIndexTextures.h  CardStackIntersectionChecker.cpp  CardStackIntersectionChecker.h  CardStackMisalignmentGenerator.h  CardTextures.cpp  CardTextures.h  DataColorVertexArrayObject.cpp  DataColorVertexArrayObject.h  DataTextureNormalVertexArrayObject.cpp  DataTextureNormalVertexArrayObject.h  DataTextureVertexArrayObject.cpp  DataTextureVertexArrayObject.h  DataVertexArrayObject.cpp  DataVertexArrayObject.h  DrawCardStackClamper.cpp  DrawCardStackClamper.h  DrawnCardPositionComputer.cpp  DrawnCardPositionComputer.h  FrameBufferObject.cpp  FrameBufferObject.h  HandCardIntersectionChecker.cpp  HandCardIntersectionChecker.h  HandCardStackPositionGenerator.cpp  HandCardStackPositionGenerator.h  IngameButton.cpp  IngameButton.h  InstancedRenderingVbo.cpp  InstancedRenderingVbo.h  IntersectionChecker.cpp  IntersectionChecker.h  MauMauButtonPositionGenerator.cpp  MauMauButtonPositionGenerator.h  (+33 more)
client/client/state/: CMakeLists.txt  CreateLocalRoomState.cpp  CreateLocalRoomState.h  CreateRoomState.cpp  CreateRoomState.h  CreditsState.cpp  CreditsState.h  IngameState.cpp  IngameState.h  JoinRoomState.cpp  JoinRoomState.h  LocalGameEndHandler.cpp  LocalGameEndHandler.h  LocalReturnBackToMenuHandler.cpp  LocalReturnBackToMenuHandler.h  MainMenuNetworkErrorHandler.cpp  MainMenuNetworkErrorHandler.h  MainMenuState.cpp  MainMenuState.h  NetworkGameEndHandler.cpp  NetworkGameEndHandler.h  NetworkReturnBackToMenuHandler.cpp  NetworkReturnBackToMenuHandler.h  ParticipantsOverviewState.cpp  ParticipantsOverviewState.h  RoomLeaveHandlerImpl.cpp  RoomLeaveHandlerImpl.h  State.cpp  State.h  StateManager.cpp  StateManager.h
client/client/system/: CMakeLists.txt  DwordRegistryKey.cpp  DwordRegistryKey.h  GlfwCursorHandler.cpp  GlfwCursorHandler.h  GlfwDisplayHandler.cpp  GlfwDisplayHandler.h  GlfwInputHandler.cpp  (+8 more)
client/res/: CMakeLists.txt
client/test/: CMakeLists.txt
server/: CMakeLists.txt
server/server/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  ClientPacketListenerCallbackWithConnection.h  ConnectionToClient.cpp  ConnectionToClient.h  Daemon.cpp  Daemon.h  RoomManager.cpp  RoomManager.h  ServerApplication.cpp  ServerPacketTransmitter.cpp  ServerPacketTransmitter.h  ThreadSynchronizer.h
server/test/: CMakeLists.txt
shared/: CMakeLists.txt
shared/shared/: CMakeLists.txt
shared/test/: CMakeLists.txt
(+456 files in other folders)
